# decky-wegame

./: .gitignore  DEVLOG.md  LICENSE  PRD.md  README.md  electron-builder.yml  index.html  install.sh  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.codebuddy/plans/: decky-wegame-plugin_05519600(未完成).md  wegame-launcher-tauri_de8ae93b.md
.github/workflows/: build.yml
electron/: ipc.ts  main.ts  preload.ts  tsconfig.json
electron/backend/: auto_setup.ts  config.ts  dep-scanner.ts  dependencies.ts  diagnostics.ts  environment.ts  launcher.ts  logger.ts  middleware.ts  mirror-manifest.json  mirrors.ts  proton.ts  steam.ts  types.ts  updater.ts  wegame_installer.ts
skills/: .skills_store_lock.json
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  dependencies.rs  environment.rs  launcher.rs  lib.rs  main.rs  proton.rs  steam.rs
src/components/: AutoSetupScreen.tsx  ConfirmDialog.tsx  DiagnosticsPanel.tsx  HeaderBar.tsx  LogViewer.tsx  ProgressBar.tsx  Sidebar.tsx  StatusCard.tsx  WelcomeScreen.tsx
src/components/config/: PathsSection.tsx  ProtonPicker.tsx  WeGameInstaller.tsx
src/hooks/: useEnvironment.ts  useInstallProgress.ts  useWegameStatus.ts
src/pages/: About.tsx  Dashboard.tsx  Dependencies.tsx  Launcher.tsx  Settings.tsx  SettingsPage.tsx  SetupWizard.tsx  UpdateChecker.tsx
src/types/: index.ts
src/utils/: api.ts  constants.ts
