[package]
name = "decky-wegame"
version = "0.1.0"
description = "WeGame Launcher for Steam Deck - Run Tencent WeGame on SteamOS"
authors = ["CGL"]
edition = "2021"

[lib]
name = "decky_wegame_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
anyhow = "1"
shellexpand = "3"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
